# Modern

./: CMakeLists.txt  proto.c
chapter1/: test1.c
chapter3/: addfrac.c  excercises.c  test.c
chapter4/: exercises4.c  test4.c
chapter5/: exercises5.c  test.c
chapter6/: exercises6.c  test6.c
chapter7/: test7.c
